@@ -9,7 +9,8 @@ describe 'nfs basic' do
 
   let(:manifest) {
     <<-EOM
-      include '::nfs'
+      include 'nfs'
+      include 'ssh'
     EOM
   }
 
@@ -19,8 +20,11 @@ describe 'nfs basic' do
 simp_options::firewall : true
 simp_options::kerberos : false
 simp_options::stunnel : false
-simp_options::tcpwrappers : true
+simp_options::tcpwrappers : false
 simp_options::trusted_nets : ['ALL']
+
+ssh::server::conf::permitrootlogin : true
+ssh::server::conf::authorizedkeysfile : '.ssh/authorized_keys'
 
 # Set us up for a basic server for right now (no Kerberos)
 
@@ -55,7 +59,8 @@ nfs::is_server : #IS_SERVER#
   end
 
   server_manifest = <<-EOM
-    include '::nfs'
+    include 'nfs'
+    include 'ssh'
 
     file { '/srv/nfs_share':
       ensure => 'directory',
@@ -96,6 +101,8 @@ nfs::is_server : #IS_SERVER#
           server_fqdn = fact_on(server, 'fqdn')
 
           client_manifest = <<-EOM
+            include 'ssh'
+
             nfs::client::mount { '/mnt/#{server}':
               nfs_server        => '#{server_fqdn}',
               remote_path       => '/srv/nfs_share',
@@ -118,6 +125,8 @@ nfs::is_server : #IS_SERVER#
           server_fqdn = fact_on(server, 'fqdn')
 
           autofs_client_manifest = <<-EOM
+            include 'ssh'
+
             nfs::client::mount { '/mnt/#{server}':
               nfs_server        => '#{server_fqdn}',
               remote_path       => '/srv/nfs_share',
